<resources>
    <string name="app_name">Motatawera</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logo">logo</string>
    <string name="_2021_kmk_inc">© 2021 KMK Inc.</string>
    <string name="password">password</string>
    <string name="ID">ID</string>
    <string name="login">Login</string>
    <string name="Login">Login</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">logout</string>
    <string name="Postfragment">Posts</string>
    <string name="Chatfragment">Chat</string>
    <string name="Notificationfragment">Notifications</string>
    <string name="Profilefragment">Profile</string>
    <string name="Settingfragment">Settings</string>
    <string name="todo">TODO</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>



    <string name="motatwera">Motatwera</string>
    <string name="_8m">8m</string>
    <string name="_2020_11_27_5_300_150_2020_11_19">متطورة_الهرم #_ تعلن إدارة المعهد عن تنظيم الحفل السنوى للخريجين وذلك يوم الجمعة الموافق 2020/11/27 الساعة الخامسة مساء بمدرج رقم 5 بالمعهد العالي للدراسات المتطورة بالهرم وقيمة الاشتراك للخريج 300 (ثلاثمائة جنيها) منها 150 (مائة وخمسون جنيها) تآمين ملابس الحفل تسترد بعد الحفل . آخر موعد للتسجيل يوم الخميس الموافق 2020/11/19 يسدد الاشتراك بمكتب رعاية الشباب بالمععد مع تمنياتنا للجميع بالنجاح والتوفيق وكل عام وأنتم بخير إدارة المعهد</string>
    <string name="_50">50</string>
    <string name="_20">20</string>
    <string name="_10">10</string>
    <string name="motatawera">Motatawera</string>


</resources>