<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="802dp"


        android:layout_above="@+id/txtrememberpass"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-2dp"
        android:layout_marginBottom="-1dp"
        android:background="@drawable/bg_shadow_layout"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/tvlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:text="@string/login"
                android:textColor="@color/MainRedColor"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>


        <TextView
            android:id="@+id/loginenterance"
            android:layout_width="243dp"
            android:layout_height="51dp"

            android:layout_marginTop="150dp"
            android:paddingLeft="30dp"
            android:text="Cominicate with a hundred of Students !"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">


            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:inputType="number"
                android:autofillHints=""
                android:background="@drawable/bg_edit_text"
                android:drawableStart="@drawable/ic_baseline_perm_identity_24"
                android:drawableLeft="@drawable/ic_baseline_perm_identity_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/ID"
                android:paddingLeft="20dp"

                android:textColor="@color/inputtextcolor" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/bg_edit_text"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawableEnd="@drawable/ic_noshowpassword"
                android:drawableRight="@drawable/ic_noshowpassword"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/inputtextcolor"
             />


        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/bg_botton"
            android:text="@string/Login"
            app:backgroundTint="@color/MainRedColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



    </LinearLayout>

    <TextView
        android:id="@+id/txtrememberpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="51dp"
        android:text="Can’t Sign In? Reset Password"
        android:textColor="@color/MainRedColor" />


</RelativeLayout>